[package]
name = "pi_slot_deque"
version = "0.1.3"
authors = ["suncy <530739162@qq.com>"]
edition = "2021"
description = "Two terminal queue based on slotmap"
repository = "https://github.com/GaiaWorld/pi_slot_deque.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "deque", "slot_deque", "pi_slot_deque"]

[dependencies]
slotmap = "1.0"
